--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 # Site Author
 author:
   name             : "SUNIN LEE"
-  avatar           : "/assets/images/bio-photo.jpg"
+  avatar           : "https://ifh.cc/g/YQlV0G.jpg"
   bio              : "I am a **happy** person."
   location         : "Somewhere"
   email            :
